testsuite/tests/deriving/should_fail/T9600-1.hs
{-# LANGUAGE GeneralizedNewtypeDeriving #-}

import Control.Applicative

newtype Foo a = Foo (a -> a) deriving Applicative
